fix: updated [overflow: hidden]

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
         margin: 0;
         box-sizing: border-box;
         overflow-x: hidden;
+        overflow-y: hidden;
         min-width: 300px;
     }
 
@@ -39,12 +40,6 @@
         max-height: 100%;
         display: block;
     } */
-
-    @media (min-width: 1024px) {
-        body {
-            overflow-y: hidden;
-        }
-    }
 
     .imgSection {
         transform: translateY(-100px);
